--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -617,50 +617,52 @@
 		            </table></div>
         </div>
       </tab>
-       <tab heading="My Device" select="getAllOwnHardware()" active="hardwareTab" ng-show="$parent.PermissionService.showMenu('READ_ownedhardware')">
+       <tab heading="Event Sale" select="getEventSale()" active="eventordertab" ng-show="$parent.PermissionService.showMenu('READ_ownedhardware')">
       
       <div class="pull-right">
-		
-		<a ng-show="PermissionService.showMenu('CREATE_ownedhardware')" href="#/addownedhardware/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Add Device</a>
-	</div>
-    
-    <div>
-		<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name/Serial Number">
-		<table class="table">
-			<thead>
-				<tr class="graybg">
-				 	<th>{{'table.heading.id' | translate}}</th>
-					<th>{{'table.heading.serialnumber' | translate}}</th>
-					<th>{{'table.heading.provisioningserialnumber' | translate}}</th>
-					<th>{{'table.heading.allocationdate' | translate}}</th>
-					<th>{{'table.heading.status' | translate}}</th>
-					<th>{{'table.heading.itemtype' | translate}}</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr class="pointer-main" ng-repeat="ownhardware in ownhardwares  | filter:filterText">
-					<td class="pointer" data-ng-click="routeToOwnHardware(ownhardware.id)">{{ownhardware.id}}</td>
-					<td class="pointer" data-ng-click="routeToOwnHardware(ownhardware.id)">{{ownhardware.serialNumber}}</td>  
-					<td class="pointer" data-ng-click="routeToOwnHardware(ownhardware.id)">{{ownhardware.provisioningSerialNumber}}</td>
-					<td class="pointer" data-ng-click="routeToOwnHardware(ownhardware.id)">{{ownhardware.allocationDate | DateFormat}}</td>
-					<td>{{ownhardware.status}}</td> 
-					<td>{{ownhardware.itemType}}</td> 
-				</tr>
-			</tbody>
-		</table>
-	</div>
+
+					<a href="#/eventorder/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i> Add Event Order</a>
+
+				</div>
+			    	<div>
+					<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name/Serial Number">
+					<table class="table">
+						<thead>
+							<tr class="graybg">
+							 	<th>{{'table.heading.id' | translate}}</th>
+								<th>{{'table.heading.eventName' | translate}}</th>
+								<th>{{'table.heading.bookedDate' | translate}}</th>
+								<th>{{'table.heading.chargecode' | translate}}</th>
+								<th>{{'table.heading.eventPrice' | translate}}</th>
+								<th>{{'table.heading.status' | translate}}</th>
+								
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="eventOrders in eventOrders  | filter:filterText">
+								<td>{{eventOrders.id}}</td>
+								<td>{{eventOrders.eventName}}</td>
+								<td>{{eventOrders.bookedDate | DateFormat}}</td>
+								<td>{{eventOrders.chargeCode}}</td>
+								<td>{{eventOrders.eventPrice}}</td> 
+								<td>{{eventOrders.status}}</td> 
+								
+							</tr>
+						</tbody>
+					</table>
+					</div>
       </tab>
-      <tab heading="Device Sale" select="getOneTimeSale()" active="SaleTab"
+      <tab heading="Device" select="getOneTimeSale()" active="SaleTab"
       ng-show="$parent.PermissionService.showMenu('READ_ONETIMESALE')">
       <hr>
  		<div class="tabbable">
   			<ul class="nav nav-tabs">
 				    <li class={{eventsaleC}}><a ng-click="eventsaleTab()" data-toggle="tab" >Device Sale</a></li>
-    				<li ng-show="PermissionService.showMenu('CREATE_EVENTORDER')&&PermissionService.showMenu('READ_EVENTORDER')" class={{eventorderC}}><a ng-click="eventorderCTab()" data-toggle="tab">Event Sale</a></li>
+    				<!-- <li ng-show="PermissionService.showMenu('CREATE_EVENTORDER')&&PermissionService.showMenu('READ_EVENTORDER')" class={{eventorderC}}><a ng-click="eventorderCTab()" data-toggle="tab">Event Sale</a></li> -->
+    				<li ng-show="PermissionService.showMenu('CREATE_ownedhardware')" class={{mydeviceC}}><a ng-click="getAllOwnHardware()" data-toggle="tab">My Device</a></li> 
     				<!-- <li class={{eventorderC}}><a ng-click="eventorderCTab()" data-toggle="tab">Event Sale</a></li> -->
 			    </ul>
 			<div class="tab-content">
-  
 		    <div id="pane1" class="tab-pane" ng-class="{active: eventsaleC}">
 				<div class="pull-right">
 					<a ng-show="PermissionService.showMenu('CREATE_ONETIMESALE')" href="#/addonetimesale/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i> New Sale</a>
@@ -707,39 +709,35 @@
 			    
 			    
 			    
-			    <div id="pane2" class="tab-pane" ng-class="{active: eventorderC}" >
-			    <div class="pull-right">
-
-					<a href="#/eventorder/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i> Add Event Order</a>
-
+			    <div id="pane2" class="tab-pane" ng-class="{active: mydeviceC}" >
+      			<div class="pull-right">
+				<a ng-show="PermissionService.showMenu('CREATE_ownedhardware')" href="#/addownedhardware/{{client.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Add Device</a>
 				</div>
-			    	<div>
+     			<div>
 					<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name/Serial Number">
-					<table class="table">
-						<thead>
-							<tr class="graybg">
+						<table class="table">
+							<thead>
+							  <tr class="graybg">
 							 	<th>{{'table.heading.id' | translate}}</th>
-								<th>{{'table.heading.eventName' | translate}}</th>
-								<th>{{'table.heading.bookedDate' | translate}}</th>
-								<th>{{'table.heading.chargecode' | translate}}</th>
-								<th>{{'table.heading.eventPrice' | translate}}</th>
+								<th>{{'table.heading.serialnumber' | translate}}</th>
+								<th>{{'table.heading.provisioningserialnumber' | translate}}</th>
+								<th>{{'table.heading.allocationdate' | translate}}</th>
 								<th>{{'table.heading.status' | translate}}</th>
-								
+								<th>{{'table.heading.itemtype' | translate}}</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="eventOrders in eventOrders  | filter:filterText">
-								<td>{{eventOrders.id}}</td>
-								<td>{{eventOrders.eventName}}</td>
-								<td>{{eventOrders.bookedDate | DateFormat}}</td>
-								<td>{{eventOrders.chargeCode}}</td>
-								<td>{{eventOrders.eventPrice}}</td> 
-								<td>{{eventOrders.status}}</td> 
-								
-							</tr>
-						</tbody>
-					</table>
-					</div>
+							<tr class="pointer-main" ng-repeat="ownhardware in ownhardwares  | filter:filterText">
+								<td class="pointer" data-ng-click="routeToOwnHardware(ownhardware.id)">{{ownhardware.id}}</td>
+								<td class="pointer" data-ng-click="routeToOwnHardware(ownhardware.id)">{{ownhardware.serialNumber}}</td>  
+								<td class="pointer" data-ng-click="routeToOwnHardware(ownhardware.id)">{{ownhardware.provisioningSerialNumber}}</td>
+								<td class="pointer" data-ng-click="routeToOwnHardware(ownhardware.id)">{{ownhardware.allocationDate | DateFormat}}</td>
+								<td>{{ownhardware.status}}</td> 
+								<td>{{ownhardware.itemType}}</td> 
+						</tr>
+				</tbody>
+			</table>
+		</div>
 			    </div>
 			    
 			  </div>
