--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -64,14 +64,14 @@
    	<div class="row-fluid primarydiv"> 
 	   <span class="pull-right">
 	       <div class="btn-group">
-	         <a ng-show="(orderData.status == 'ACTIVE')&&PermissionService.showMenu('UPDATE_ORDER')||(orderData.status == 'SUSPENDED')" href="" ng-click="orderDisconnect(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class="icon-remove icon-white"></i> Disconnect</a>
-	         <a ng-show="(orderData.status == 'DISCONNECTED')&&PermissionService.showMenu('RECONNECT_ORDER')||(orderData.status == 'SUSPENDED')" ng-click="reconnect()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Reconnect</a>
+	         <a ng-show="(orderData.status == 'ACTIVE')&&PermissionService.showMenu('UPDATE_ORDER')||(orderData.status == 'SUSPENDED')" href="" ng-click="orderDisconnect(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class="icon-remove fa-spin icon-white"></i> Disconnect</a>
+	         <a ng-show="(orderData.status == 'DISCONNECTED')&&PermissionService.showMenu('RECONNECT_ORDER')" ng-click="reconnect()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Reconnect</a>
 	         <a ng-show="(orderData.contractPeriod != 'Perpetual' && orderData.status != 'PENDING' && orderData.status != 'SUSPENDED' && orderData.isPrepaid == 'N')&&PermissionService.showMenu('RENEWAL_ORDER')" href="" ng-click="orderRenew(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class="icon-edit icon-white"></i>Renewal</a>
 	         <a ng-show="(orderData.isPrepaid == 'Y' && orderData.status == 'ACTIVE')&&PermissionService.showMenu('RENEWAL_ORDER')"  href="" ng-click="orderRenew(orderPriceDatas[0].orderId)"class="btn btn-primary"><i class="icon-arrow-up icon-white"></i>TopUp</a>
 	        <!--  <a ng-show="orderData.status == 'ACTIVE'" ng-click="CommandCenter(orderPriceDatas[0].orderId)" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Command Center</a> -->
 	         <a ng-show="(orderData.status == 'PENDING')&&PermissionService.showMenu('DELETE_ORDER')" ng-click="cancelOrder()" class="btn btn-primary"><i class="icon-remove-circle icon-white"></i> Cancel Order</a>
 	         <a ng-show ="(association.orderId == null)&&PermissionService.showMenu('CREATE_ASSOCIATION')"  href="#/association/{{clientId}}/{{orderPriceDatas[0].orderId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Pairing</a>
-		     <a ng-show ="(orderData.status == 'DISCONNECTED' && association.orderId != null)&&PermissionService.showMenu('DEASSOCIATION_ASSOCIATION')" ng-click="deAssociation()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Un Pairing</a>
+		     <a ng-show ="(orderData.status == 'DISCONNECTED' && association.orderId != null)&&PermissionService.showMenu('DEASSOCIATION_ASSOCIATION')" ng-click="deAssociation()" class="btn btn-primary"><i class="icon-repeat icon-white"></i> Un Pairing</a>
 		     <a ng-show ="(orderData.status == 'ACTIVE')&&PermissionService.showMenu('SWAPPING_HARDWARESWAPPING')" href="#/hardwareswap/{{association.saleId}}/{{clientId}}/{{association.orderId}}" class="btn btn-primary"><i class="icon-move"></i>Device Swap</a>
 		     <a ng-show ="(orderData.status == 'ACTIVE')&&PermissionService.showMenu('APPLYPROMO_ORDER')" ng-click="applyPromo()" class="btn btn-primary"><i class="icon-gift"></i>Apply Promo</a>
 		     <a ng-show ="orderData.status != 'PENDING' && orderData.status != 'SUSPENDED'" ng-click="extension()" class="btn btn-primary"><i class="icon-cog"></i>Extension</a>
@@ -79,6 +79,7 @@
 		     <a ng-show ="orderData.status == 'PENDING'" href="#/provision/{{orderData.id}}/{{clientId}}/{{orderServicesData[0].serviceId}}" class="btn btn-primary"><i class="icon-cog"></i>Provision It</a>
 		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/editprovison/{{orderData.id}}/{{clientId}}/{{orderServicesData[0].serviceId}}" class="btn btn-primary"><i class="icon-cog"></i>Edit Provision</a>
 		     <a ng-show="(orderData.status == 'DISCONNECTED')&&PermissionService.showMenu('RECONNECT_ORDER')" ng-click="terminate()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Terminate</a>
+		     <a ng-show="orderData.status == 'SUSPENDED'" ng-click="reactive()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> ReActive</a>
 	        	<span  class="btn-group">
               		<a class="btn btn-primary dropdown-toggle" ng-show="(orderData.status == 'ACTIVE')&&PermissionService.showMenu('RETRACKOSDMESSAGE_ORDER')">
 	                	{{ 'label.button.more' | translate}}
@@ -279,6 +280,7 @@
 					<th>Status</th>
 					<th>Recieved Message</th>
 					<th></th>
+					<th></th>
 					<th>Sent Message</th>
 				</tr>
         </thead>
@@ -290,8 +292,10 @@
 					<td ng-show="provisioningdata.isProcessed == 'F'" class="pointer" >Failure</td>
 					<td ng-show="provisioningdata.isProcessed == 'Y'" class="pointer" >Success</td>
 					<td ng-show="provisioningdata.isProcessed == 'N'" class="pointer" >Processing</td>
+					<td ng-show="provisioningdata.isProcessed == 'C'" class="pointer" >Success</td>
 					<td class="pointer" >{{provisioningdata.receiveMessage}}</td>
 					  <td><a ng-show="provisioningdata.isProcessed == 'F' " ng-click="reProcess(provisioningdata.id)" popover="Re Process" popover-trigger="mouseenter"><i class="icon-play icon-white"></i></a></td>
+					   <td><a ng-show="provisioningdata.isProcessed == 'F' " ng-click="confirmRequest(provisioningdata.id)" popover="Confirm Request" popover-trigger="mouseenter"><i class="icon-ok icon-white"></i></a></td>
 					<td><button style="padding:3px 5px;" class="btn btn-primary" ng-hide="provisioningdata.requestType=='RETRACK'"
 								ng-click="sentMessagePopup(provisioningdata.id)" tooltip-placement="top" tooltip="Click Me">
 								<i class="icon-envelope icon-white"></i></button></td> 
@@ -372,7 +376,7 @@
    <div class="modal-header silver">
    			<h3 class="bolder">{{'dialog.reconnect.title.message' | translate}}</h3>
    </div>
-    <div class="modal-body modal-big">
+    <div class="modal-body modal-small">
        	<div class="error" ng-show="errorStatus || errorDetails">
 			<label>{{'label.contract.error' | translate}}</label>
 			<label ng-show="errorStatus">{{errorStatus}}</label>
@@ -390,7 +394,7 @@
    <div class="modal-header silver">
   			<h3 class="bolder">{{'dialog.terminate.title.message' | translate}}</h3>
     </div>
-    <div class="modal-body modal-big">
+    <div class="modal-body modal-small">
        	<div class="error" ng-show="errorStatus || errorDetails">
 			<label>{{'label.contract.error' | translate}}</label>
 			<label ng-show="errorStatus">{{errorStatus}}</label>
@@ -401,6 +405,42 @@
    <div class="modal-footer">
    			<button id="cancel" class="btn btn-warning" ng-click="cancelReconnect()">{{'button.cancel' | translate}}</button>
             <button id="submit" class="btn btn-primary" ng-click="approveTerminate()" ng-disabled="flagApproveTerminate">{{'label.confirm' | translate}}</button>
+   </div>
+</script>
+
+<script type="text/ng-template" id="ApproveConfirm.html">
+   <div class="modal-header silver">
+  			<h3 class="bolder">{{'dialog.confirm.title.message' | translate}}</h3>
+    </div>
+    <div class="modal-body modal-small">
+       	<div class="error" ng-show="errorStatus || errorDetails">
+			<label>{{'label.contract.error' | translate}}</label>
+			<label ng-show="errorStatus">{{errorStatus}}</label>
+			<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	    </div>
+      <h4>Are you sure?</h4>
+   </div>
+   <div class="modal-footer">
+   			<button id="cancel" class="btn btn-warning" ng-click="cancelReconnect()">{{'button.cancel' | translate}}</button>
+            <button id="submit" class="btn btn-primary" ng-click="approveTerminate()" ng-disabled="flagApproveTerminate">{{'label.confirm' | translate}}</button>
+   </div>
+</script>
+
+<script type="text/ng-template" id="ApproveReactive.html">
+   <div class="modal-header silver">
+  			<h3 class="bolder">{{'dialog.reactive.title.message' | translate}}</h3>
+    </div>
+    <div class="modal-body modal-big">
+       	<div class="error" ng-show="errorStatus || errorDetails">
+			<label>{{'label.contract.error' | translate}}</label>
+			<label ng-show="errorStatus">{{errorStatus}}</label>
+			<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	    </div>
+      <h4>Are you sure?</h4>
+   </div>
+   <div class="modal-footer">
+   			<button id="cancel" class="btn btn-warning" ng-click="cancelReactive()">{{'button.cancel' | translate}}</button>
+            <button id="submit" class="btn btn-primary" ng-click="approveReactive()" ng-disabled="flagApproveTerminate">{{'label.confirm' | translate}}</button>
    </div>
 </script>
 
