--- a/app/views/clients/createactivation.html
+++ b/app/views/clients/createactivation.html
@@ -243,4 +243,4 @@
               <button id="submit" type="submit"  class="btn btn-primary">Save</button>
             </div>
         </fieldset>
-      </form>y
+      </form>
