--- a/app/views/organization/createPlan.html
+++ b/app/views/organization/createPlan.html
@@ -93,7 +93,7 @@
                  <div><label class="control-label"></label></div>
                 <div class="span3">
                     <label class="control-label">{{ 'label.availableservice' | translate }}</label>
-                    <select multiple ng-model="allowed">
+                    <select multiple ng-model="allowed" style="height:100px;">
                         <option ng-repeat="availableService in availableServices" value="{{availableService.id}}">{{availableService.serviceDescription}}</option>
                     </select>
                 </div>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="span3">
                     <label class="control-label">{{ 'label.selectedservice' | translate }}</label>
-                    <select multiple ng-model="restricted">
+                    <select multiple ng-model="restricted" style="height:100px;">
                         <option ng-repeat="selectedService in selectedServices" value="{{selectedService.id}}">{{selectedService.name}}</option>
                     </select>
                 </div>
