--- a/app/views/organization/editplan.html
+++ b/app/views/organization/editplan.html
@@ -86,7 +86,7 @@
                  <div><label class="control-label"></label></div>
                 <div class="span3">
                     <label class="control-label">{{ 'label.availableservice' | translate }}</label>
-                    <select multiple ng-model="allowed">
+                    <select multiple ng-model="allowed" style="height:100px;">
                         <option ng-repeat="service in services" value="{{service.id}}">{{service.serviceDescription}}</option>
                     </select>
                 </div>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="span3">
                     <label class="control-label">{{ 'label.selectedservice' | translate }}</label>
-                    <select multiple ng-model="restricted">
+                    <select multiple ng-model="restricted" style="height:100px;">
                         <option ng-repeat="selectedService in selectedServices" value="{{selectedService.id}}">{{selectedService.serviceCode}}</option>
                     </select>
                 </div>
