image column added to planmapping

--- a/app/views/system/createPlanMapping.html
+++ b/app/views/system/createPlanMapping.html
@@ -41,6 +41,12 @@
               </select>
             </div>
           </div>
+          <div class="control-group">
+            <label class="control-label" for="image">{{'label.image' | translate }}</label>
+            <div class="controls">
+              <input type="text" id="image" ng-model="formData.image">
+            </div>
+          </div>
          
           <div class="offset3">
             <a href="#/mappingconfig"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
