--- a/app/views/system/viewplanmapping.html
+++ b/app/views/system/viewplanmapping.html
@@ -27,6 +27,10 @@
 				<td>{{'label.status' | translate }}</td>
 				<td>{{planMappingData.planStatus}}</td>
 			</tr>
+			<tr>
+				<td>{{'label.image' | translate }}</td>
+				<td>{{planMappingData.image}}</td>
+			</tr>
 		</table>
 	</div>
 </div>
