--- a/app/views/system/editPlanMapping.html
+++ b/app/views/system/editPlanMapping.html
@@ -40,6 +40,13 @@
               </select>
             </div>
           </div>
+          
+          <div class="control-group">
+            <label class="control-label" for="image">{{'label.image' | translate }}</label>
+            <div class="controls">
+              <input type="text" id="image" ng-model="formData.image">
+            </div>
+          </div>
          
           <div class="offset3">
             <a href="#/viewplanmapping/{{planMappingId}}"><button id="cancel" type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
