--- a/myaccount/selfcare_module/views/clients/signupform.html
+++ b/myaccount/selfcare_module/views/clients/signupform.html
@@ -39,7 +39,7 @@
 						</div>
                     </div>
                     <div class="modal-footer">
-                        <a id="submit" class="btn btn-primary" ng-click="reject()">{{'btn.done' | translate}}</a>
+                        <a id="submit" class="btn btn-primary" href="http://www.gmail.com" ng-click="reject()">{{'btn.done' | translate}}</a>
                     </div>
       </script>
       <script type="text/ng-template" id="alredyexistpopup.html">
