--- a/app/views/organization/createPlan.html
+++ b/app/views/organization/createPlan.html
@@ -133,13 +133,13 @@
             </div>
           </div>
           <div ng-show="formData.isPrepaid">
-            <div class="control-group">
+          <!--   <div class="control-group">
               <label class="control-label" for="duration">{{ 'label.plan.duration' | translate }}</label>
               <div class="controls">
                 <select ng-model="formData.duration"  ng-options="subscriptiondata.Contractdata as subscriptiondata.Contractdata for subscriptiondata in subscriptiondata" value="{{subscriptiondata.Contractdata}}"></select>
               </div>
               
-            </div>
+            </div> -->
             <div class="control-group">
               <label class="control-label" for="allowTopup">{{ 'label.plan.volume' | translate }}</label>
               <div class="controls">
