--- a/app/views/system/editjobparameters.html
+++ b/app/views/system/editjobparameters.html
@@ -23,21 +23,21 @@
                 </div>
               </div>
               
-              <div class="control-group" ng-show="formData.displayName =='Invoice'">
+              <div class="control-group" ng-show="formData.displayName =='INVOICING'">
             <label class="control-label" for="startDate">{{ 'label.job.processdate' | translate }}</label>
             <div class="controls">
                  <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.processDate" is-open="opened" min="minDate" max="'2020-06-22'" date-disabled="disabled(date, mode)"/>
             </div>
            </div>
            
-              <div class="control-group" ng-show="formData.displayName =='Generate Statement'">
+              <div class="control-group" ng-show="formData.displayName =='STATEMENT'">
             <label class="control-label" for="startDate">{{ 'label.job.duedate' | translate }}</label>
             <div class="controls">
                  <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.dueDate" is-open="opened" min="minDate" max="'2020-06-22'" date-disabled="disabled(date, mode)"/>
             </div>
            </div>
            
-            <div class="control-group" ng-show="formData.displayName =='Generate Statement'">
+            <div class="control-group" ng-show="formData.displayName =='STATEMENT'">
 			<label class="control-label" for="promotionalMessage">{{'label.job.promotionalmessage' | translate}}</label>
 			<div class="controls">
 				<textarea rows="2" cols="2" ng-model="formData.promotionalMessage"></textarea>
@@ -52,7 +52,7 @@
                 </div>
               </div>
 
-                <div class="control-group" ng-show="formData.displayName =='Auto Exipiry'">
+                <div class="control-group" ng-show="formData.displayName =='AUTO_EXPIRY'">
             <label class="control-label" for="startDate">{{ 'label.job.exipirydate' | translate }}</label>
             <div class="controls">
                  <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.exipiryDate" is-open="opened" min="minDate" max="'2020-06-22'" date-disabled="disabled(date, mode)"/>
@@ -92,7 +92,23 @@
                 <input type="text" ng-model="jobparameters.password">
                 </div>              
            </div>
-           <div class="control-group">
+            <div class="control-group" ng-show="formData.displayName =='SIMULATOR'">  
+                <label class="control-label">{{ 'label.job.updateStatus' | translate }}</label>
+                <div class="controls">
+                 <label class="checkbox">
+                          <input type="checkbox" ng-model="formData.isUpdateStatus">
+                      </label>
+                </div>              
+           </div>
+            <div class="control-group" ng-show="formData.displayName =='SIMULATOR'">              
+                <label class="control-label">{{ 'label.job.createticket' | translate }}</label>
+                <div class="controls">
+                 <label class="checkbox">
+                          <input type="checkbox" ng-model="formData.isCreateTicket">
+                      </label>
+                </div>              
+           </div>
+           <div class="control-group"  ng-hide="formData.displayName =='SIMULATOR'">
                 <label class="control-label" for="isDynamic">{{ 'label.job.isDynamic' | translate }}</label>
                    <div class="controls">
                       <label class="checkbox">
