edit ip pooling

--- a/app/views/system/editippolling.html
+++ b/app/views/system/editippolling.html
@@ -31,7 +31,7 @@
 									</div>
 								</td>
 							</tr>	
-							<tr>
+							<tr ng-hide="typeCodeValue.status=='Assigned'">
 								<td>
 									<div class="control-group">
 									<label class="control-label">{{ 'table.ippooling.status' | translate }}</label>
