--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -410,7 +410,7 @@
                 <input type="text" ng-model="parentClient" name="parentClient"  placeholder="Search by Parent #" 
                        typeahead="parentClient.displayLabel as parentClient.displayLabel for parentClient  in getparent($viewValue) | limitTo:8" 
                        typeahead-min-length="0"/>
-                <button class="btn btn-primary" type="submit" disabled ng-click="saveParent(parentClient)">save</button>
+                <button class="btn btn-primary btn-disabled" type="submit" disabled ng-click="saveParent(parentClient)">save</button>
         </span>
         </div>
           <table class="table" ng-show=parent.id>
