--- a/app/views/administration/viewrole.html
+++ b/app/views/administration/viewrole.html
@@ -29,14 +29,14 @@
 		<tr>
 			<td width="15%"  valign="top">
 				<table>
-					<tr ng-repeat="grouping in groupings" ng-class="{graybg: grouping == previousGrouping}">
+					<tr ng-repeat="grouping in groupings  track by $index" ng-class="{graybg: grouping == previousGrouping}">
 						<td><a ng-click="showPermissions(grouping);"><span>{{formatName(grouping)}}</span></a></td>
 					</tr>
 				</table>
 			</td>
 			<td width="85%" valign="top">
 				<table width="100%">
-					<tr ng-repeat="permission in permissions.permissions">
+					<tr ng-repeat="permission in permissions.permissions" >
 						<td width="50%"><label for="{{permission.code}}">{{permissionName(permission.code)}}</label></td>
 						<td><input id="{{permission.code}}" type="checkbox" ng-checked="permission.data" ng-disabled="true"></td>
 					</tr>
